Added additional property to account principal Edited endpoint structure. Edited response Model Edited open  routes. Remodel transaction history dto