@@ -7,8 +7,8 @@ import java.util.List;
 
 @Getter
 public enum OpenRoutes {
-    BANK_CONTROLLER(List.of("POST"), "/create_account"),
-    AUTH_CONTROLLER(Collections.singletonList("POST"), "/login");
+    BANK_CONTROLLER(List.of("POST"), "/api/v1/create_account"),
+    AUTH_CONTROLLER(Collections.singletonList("POST"), "/api/v1/login");
 
     private final String route;
     private final List<String> methods;
